[gd_scene load_steps=4 format=3 uid="uid://dkddmc51hd7vm"]

[ext_resource type="Theme" uid="uid://63duv3n1vwhg" path="res://ui/themes/VikingDynastyTheme.tres" id="1_u7j46"]
[ext_resource type="Script" uid="uid://fqjnvnfvylr3" path="res://scripts/ui/WinterCourt_UI.gd" id="2_vt6gd"]
[ext_resource type="Texture2D" uid="uid://c6v2d1q8q7e3j" path="res://assets/placeholder_tile.tres" id="3_yfdu5"]

[node name="WinterCourt_UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_u7j46")
script = ExtResource("2_vt6gd")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.1, 0.1, 0.15, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_yfdu5")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScreenMargin" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="RootLayout" type="VBoxContainer" parent="MarginContainer/ScreenMargin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="TopLayout" type="HBoxContainer" parent="MarginContainer/ScreenMargin/RootLayout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="LeftPanel" type="PanelContainer" parent="MarginContainer/ScreenMargin/RootLayout/TopLayout"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScreenMargin/RootLayout/TopLayout/LeftPanel"]
layout_mode = 2

[node name="ActionPointsLabel" type="Label" parent="MarginContainer/ScreenMargin/RootLayout/TopLayout/LeftPanel/VBoxContainer"]
layout_mode = 2

[node name="JarlNameLabel" type="Label" parent="MarginContainer/ScreenMargin/RootLayout/TopLayout/LeftPanel/VBoxContainer"]
layout_mode = 2

[node name="JarlPortrait" type="TextureRect" parent="MarginContainer/ScreenMargin/RootLayout/TopLayout/LeftPanel/VBoxContainer"]
layout_mode = 2

[node name="CenterPanel" type="VBoxContainer" parent="MarginContainer/ScreenMargin/RootLayout/TopLayout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15
alignment = 1

[node name="Btn_Feast" type="Button" parent="MarginContainer/ScreenMargin/RootLayout/TopLayout/CenterPanel"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
tooltip_text = "Restores Warband Loyalty"
text = "Host Yule Feast"
alignment = 0

[node name="Btn_Thing" type="Button" parent="MarginContainer/ScreenMargin/RootLayout/TopLayout/CenterPanel"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
tooltip_text = "Settle Disputes"
text = "Preside Over Thing"
alignment = 0

[node name="Btn_Blot" type="Button" parent="MarginContainer/ScreenMargin/RootLayout/TopLayout/CenterPanel"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
tooltip_text = "Sacrifice for Boons"
text = "Perform Bl√≥t"
alignment = 0

[node name="Btn_Heir" type="Button" parent="MarginContainer/ScreenMargin/RootLayout/TopLayout/CenterPanel"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
tooltip_text = "Train your successor"
text = "Mentor Heir"
alignment = 0

[node name="Btn_Refit" type="Button" parent="MarginContainer/ScreenMargin/RootLayout/TopLayout/CenterPanel"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
tooltip_text = "Repair Fleet Readiness"
text = "Refit Longships"
alignment = 0

[node name="RightPanel" type="PanelContainer" parent="MarginContainer/ScreenMargin/RootLayout/TopLayout"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScreenMargin/RootLayout/TopLayout/RightPanel"]
layout_mode = 2

[node name="UpkeepLabel" type="RichTextLabel" parent="MarginContainer/ScreenMargin/RootLayout/TopLayout/RightPanel/VBoxContainer"]
layout_mode = 2

[node name="FleetLabel" type="Label" parent="MarginContainer/ScreenMargin/RootLayout/TopLayout/RightPanel/VBoxContainer"]
layout_mode = 2

[node name="UnrestLabel" type="Label" parent="MarginContainer/ScreenMargin/RootLayout/TopLayout/RightPanel/VBoxContainer"]
layout_mode = 2

[node name="BottomPanel" type="HBoxContainer" parent="MarginContainer/ScreenMargin/RootLayout"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Btn_EndWinter" type="Button" parent="MarginContainer/ScreenMargin/RootLayout/BottomPanel"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
text = "The Ice Melts (Begin Summer)"

[node name="DisputeOverlay" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(600, 400)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="DisputeOverlay"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="DisputeOverlay/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="DisputeOverlay/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Dispute Title"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="DisputeOverlay/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Dispute Description goes here..."
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="DisputeOverlay/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Btn_Gold" type="Button" parent="DisputeOverlay/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Pay Gold"

[node name="Btn_Force" type="Button" parent="DisputeOverlay/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Use Force"

[node name="Btn_Ignore" type="Button" parent="DisputeOverlay/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Ignore"
